--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,4 @@
 1) ограниченный словарь с ITшной тематикой
+2) http://deeplearning.net/tutorial/lstm.html - Long short term memory tutorial
+3) https://keras.io/layers/recurrent/#simplernn - reccurent layers keras
+4) https://github.com/fchollet/keras/issues/4962 - how to add attention
